--- a/BrokenProject/app/src/main/res/layout/activity_another_broken.xml
+++ b/BrokenProject/app/src/main/res/layout/activity_another_broken.xml
@@ -8,19 +8,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="mmbuw.com.brokenproject.AnotherBrokenActivity">
 
+    <EditText
+        android:id="@+id/edittext"
+        android:hint="Enter URL here"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/connectButton"
+        android:layout_below="@+id/edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Connect"
+        android:onClick="fetchHTML" />
+
+
     <TextView
         android:id="@+id/brokenTextView"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="If you see this, you maybe fixed a bug! Or two."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_below="@+id/brokenTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="\n This view doesn't do anything really."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
