--- a/BrokenProject/app/src/main/res/layout/activity_broken.xml
+++ b/BrokenProject/app/src/main/res/layout/activity_broken.xml
@@ -13,6 +13,7 @@
         android:id="@+id/edittext"
         android:hint="Why is this thing so broken?"
         android:layout_centerHorizontal="true"
+        android:text="This string will be passed to the new activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
